style: solved overflow problem on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,11 @@
   margin: 0 auto;
 }
 
+
 section {
   display: flex;
   justify-content: space-between;
-  width: 124rem;
+  max-width: 124rem;
   margin: 0 auto;
   
 }
@@ -83,19 +84,16 @@ nav ul a {
 /* ----- Homepage ----- */
 
 .hero-section {
-  gap: 100px;
   padding: 12.5rem 0 6.7rem;
+  /* flex-wrap: wrap; */
+ 
 }
-
 .hero-section .intro {
-  justify-content: unset;
-  padding: 3rem 0;
-  height: 400px;
-  
+  flex: 48%;
 }
 
 .hero-section img {
-  width: 47.6rem;
+  margin-left: 100px;
 }
 
 .hero-section h1 {
@@ -122,7 +120,7 @@ nav ul a {
 }
 
 .search input {
-  width: 39rem;
+  flex: 60%;
   height: 5.4rem;
   padding: 2rem 1.2rem;
   border-radius: 8px 0 0 8px;
@@ -137,7 +135,7 @@ nav ul a {
 
 .search-btn {
   display: inline-block;
-  width: 23rem;
+  width:37%;
   line-height: 5.4rem;
   border-radius: 0 8px 8px 0;
   text-align: center;
@@ -155,7 +153,10 @@ section.sponsors {
 }
 
 .sponsor-logo {
-  width: 120rem;
+  margin: 0 50px;
+  width: 124rem;
+  display: flex;
+  justify-content: space-between;
 }
 .sponsors img {
   width: 21rem;
@@ -203,7 +204,7 @@ section.sponsors {
   font-weight: 600;
 }
 
-.nft1 {
+.indexOne .nft-bg {
   background-image: url(./images/druid6.png);
   width: 100%;
   height: 200px;
@@ -217,8 +218,12 @@ footer {
   background-color: #1D1D1E;
   margin: 0 auto;
   padding: 6.3rem 0 2rem;
+  max-width: 1440px;
 }
 
+footer > section {
+  margin: 0 100px;
+}
 
 
 section div:first-child {
@@ -230,6 +235,7 @@ section div:first-child {
 .company-details {
   padding-bottom: 20px;
 }
+
 .company-details i {
   margin-right: 3.5rem;
 }
@@ -268,7 +274,7 @@ footer h3 {
 
 footer h4 {
   color: #fff;
-  width: 124rem;
+  max-width: 124rem;
   margin: 0 auto;
   padding: 3rem 0;
   font-size: 1.6rem;
